# iMc

./: .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  PropertySheet.props  PropertySheet_debug.props  README.md  README_CMAKE.md  both.bat  host.bat  iMc.cpp  iMc.sln  iMc.vcxproj  iMc.vcxproj.filters  join.bat  test_both.bat  test_host.bat  test_join.bat  test_multi.bat  vcpkg.json
.claude/: settings.json  settings.local.json
assert/: held_display.json  item_registry.json  runtime_config.json
assert/mode/spyglass_in_hand_obj/: spyglass_in_hand.mtl
assert/mode/template_redstone_torch/: template_redstone_torch.mtl
assert/mode/template_redstone_torch_wall/: template_redstone_torch_wall.mtl
assert/mode/template_torch/: template_torch.mtl
assert/mode/template_torch_unlit/: template_torch_unlit.mtl
assert/mode/template_torch_wall_unlit/: template_torch_wall_unlit.mtl
assert/textures/: Minecraft砖块贴图 (2).7z  textures_config.json
scr/: Camera.cpp  Camera.h  CliManager.cpp  CliManager.h  Data.h  DebugUI.cpp  DebugUI.h  HotReload.h  Item.cpp  Item.h  Player.cpp  Player.h  Profiler.cpp  Profiler.h  RuntimeConfig.cpp  RuntimeConfig.h  Shader.cpp  Shader.h  TextureMgr.cpp  TextureMgr.h  World.cpp  World.h  World_4.cpp  World_4.h  core.h  iMc.cpp  stb_image.h
scr/UI/: UIHotbar.cpp  UIHotbar.h  UIInventory.cpp  UIInventory.h  UIManager.cpp  UIManager.h  UINumber.cpp  UINumber.h  UISlot.cpp  UISlot.h
scr/chunk/: BlockBox.h  BlockType.cpp  BlockType.h  Chunk.cpp  Chunk.h  ChunkArena.cpp  ChunkArena.h  ChunkDimensions.h  ChunkManager.cpp  ChunkManager.h  ChunkWorkerPool.cpp  ChunkWorkerPool.h  Section.cpp  Section.h
scr/collision/: AABB.cpp  AABB.h  CollisionSystem.cpp  CollisionSystem.h  PhysicsConstants.h  Ray.cpp  Ray.h
scr/entity/: DroppedItem.h  DroppedItemManager.cpp  DroppedItemManager.h
scr/entt/core/: hashed_string.hpp
scr/entt/meta/: resolve.hpp
scr/generate/: Noise.cpp  Noise.h  TerrainGenerator.cpp  TerrainGenerator.h
scr/item/: BlockItemModel.cpp  BlockItemModel.h  HeldDisplayRegistry.h  ItemDefinition.h  ItemFactory.cpp  ItemFactory.h  ItemModel.cpp  ItemModel.h  ItemRegistry.cpp  ItemRegistry.h  ItemStack.h
scr/light/: LightCache.cpp  LightCache.h  LightPropagation.cpp  LightPropagation.h  LightSource.cpp  LightSource.h
scr/mode/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  PlayerAnimator.cpp  PlayerAnimator.h  PlayerModel.cpp  PlayerModel.h  SkinManager.cpp  SkinManager.h
scr/net/: NetChunkSync.cpp  NetChunkSync.h  NetCommon.h  NetManager.cpp  NetManager.h  NetMessage.cpp  NetMessage.h  NetObject.cpp  NetObject.h  NetObjectManager.cpp  NetObjectManager.h  NetPlayer.cpp  NetPlayer.h  NetSerializeWorker.cpp  NetSerializeWorker.h  NetSerializer.h  NetTransport.cpp  NetTransport.h  lz4.c  lz4.h
scr/particle/: ECSParticleSystem.cpp  ECSParticleSystem.h  GPUParticleSystem.cpp  GPUParticleSystem.h  ParticleCommon.h  ParticleManager.cpp  ParticleManager.h
scr/physics/: collider.h  physics_layers.h  physics_system.h  world_physics.h
scr/player/: Player.cpp  Player.h
scr/render/: BlockOutlineRenderer.cpp  BlockOutlineRenderer.h  RenderDataManager.h  RenderSystem.cpp  RenderSystem.h
scr/save/: ChunkSaveManager.cpp  ChunkSaveManager.h  RegionFile.cpp  RegionFile.h
scr/task/: TaskSystem.cpp  TaskSystem.h  ThreadManager.h  ThreadMessage.h
shader/: ao_accumulate.frag  block_item.frag  block_item.vert  deferred_lighting.frag  deferred_lighting.vert  g_buffer.frag  g_buffer.vert  hbao.frag  hbao_blur.frag  item.frag  item.vert  mode.frag  mode.vert  outline.frag  outline.vert  particle.comp  particle.frag  particle.vert  shadow_accumulate.frag  shadow_mapping_depth.frag  shadow_mapping_depth.vert  shadow_visibility.frag  ssao.frag  ssao_blur.frag  taa_resolve.frag  ui.frag  ui.vert
tools/: gen_item_registry.py
